+Fixed: GCTest*: add UnlockExperimental +Changed: whetstc: run longer